# AUV-Tasks

./: README.md
Question1/: Qn
Question1/chat_ws/devel/: _setup_util.py  local_setup.sh  setup.sh
Question1/chat_ws/devel/include/chat_app/: ChatMsg.h
Question1/chat_ws/devel/lib/pkgconfig/: chat_app.pc
Question1/chat_ws/devel/share/chat_app/cmake/: chat_app-msg-paths.cmake  chat_appConfig.cmake
Question1/chat_ws/devel/share/roseus/ros/chat_app/: manifest.l
Question1/chat_ws/src/chat_app/: CMakeLists.txt  package.xml
Question1/chat_ws/src/chat_app/scripts/: chat.py
Question2/: Qn
Question2/devel/lib/pkgconfig/: calc.pc
Question2/devel/share/calc/cmake/: calcConfig.cmake
Question2/qn2_ws/devel/: local_setup.sh  setup.sh
Question2/qn2_ws/src/calc/: CMakeLists.txt
Question2/src/calc/: package.xml
Question2/src/calc/scripts/: final.py  mul.py  pub.py
Question3/: Qn
Question3/qn3_ws/devel/: local_setup.sh  setup.sh
Question3/qn3_ws/devel/include/bot/: BotPose.h
Question3/qn3_ws/devel/lib/pkgconfig/: bot.pc
Question3/qn3_ws/devel/share/bot/cmake/: bot-msg-extras.cmake  bot-msg-paths.cmake  botConfig.cmake
Question3/qn3_ws/devel/share/roseus/ros/bot/: manifest.l
Question3/qn3_ws/src/bot/: CMakeLists.txt  package.xml
Question3/qn3_ws/src/bot/scripts/: mov.py  pub.py
Task2-Question1/: Cam.py  Qn
Task2-Question2/: Qn
Task2-Question2/Pipeline_ws/devel/: setup.sh
Task2-Question2/Pipeline_ws/src/cam_edge/: CMakeLists.txt  package.xml
Task2-Question2/Pipeline_ws/src/cam_edge/scripts/: pub.py  sub.py
(+18 files in other folders)
