<?xml version="1.0"?>
<package format="2">
  <name>chat_app</name>
  <version>0.0.0</version>
  <description>The chat_app package</description>

  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Execution/runtime dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Additional export tags can be added here -->
  </export>
</package>

